fixed the jump on the table when the slider moved

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1141,8 +1141,8 @@ ul.ui-autocomplete a.ui-state-active {
 }
 
 /* remove that extra space on top when loading table page */
-.justify-content-center {
-    height: 0px;
+.op-height-0 {
+    height: 0;
 }
 
 /* Ripple In */
